fixing the indicator features now the system is compariable to prev work

--- a/queries exp include indicator features2.ipynb
+++ b/queries exp include indicator features2.ipynb
@@ -76,7 +76,7 @@
    },
    "outputs": [],
    "source": [
-    "with open('/data/matthew/external-wiki-aida1.json') as f:\n",
+    "with open('/data/matthew/external-wiki-aida2.json') as f:\n",
     "    externalWikiJ = json.load(f)\n",
     "    queries = externalWikiJ['queries']\n",
     "    featuresNames = externalWikiJ['featIndex']"
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "10415"
+       "12415"
       ]
      },
      "execution_count": 4,
@@ -114,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "1146"
+       "1148"
       ]
      },
      "execution_count": 5,
@@ -136,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "1146"
+       "1148"
       ]
      },
      "execution_count": 6,
@@ -158,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "3805"
+       "4226"
       ]
      },
      "execution_count": 7,
@@ -180,7 +180,7 @@
     {
      "data": {
       "text/plain": [
-       "14649"
+       "16751"
       ]
      },
      "execution_count": 8,
@@ -202,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "10415"
+       "12415"
       ]
      },
      "execution_count": 9,
@@ -224,7 +224,7 @@
     {
      "data": {
       "text/plain": [
-       "10353"
+       "12333"
       ]
      },
      "execution_count": 10,
@@ -454,8 +454,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6min 44s, sys: 14.3 s, total: 6min 58s\n",
-      "Wall time: 7min 5s\n"
+      "CPU times: user 6min 58s, sys: 14 s, total: 7min 12s\n",
+      "Wall time: 7min 18s\n"
      ]
     }
    ],
@@ -495,7 +495,7 @@
     {
      "data": {
       "text/plain": [
-       "168419"
+       "193299"
       ]
      },
      "execution_count": 23,
@@ -557,7 +557,7 @@
     {
      "data": {
       "text/plain": [
-       "1357920"
+       "1359440"
       ]
      },
      "execution_count": 26,
@@ -604,7 +604,7 @@
     {
      "data": {
       "text/plain": [
-       "[0, [35]]"
+       "[0, [23, 24, 26, 27, 29, 30, 32, 33, 35, 81, 82, 83, 84, 85, 86, 125]]"
       ]
      },
      "execution_count": 28,
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -628,7 +628,7 @@
     "\n",
     "    batch_size = 250 #20000\n",
     "    num_training_items = 500000 #200000\n",
-    "    dim_compared_vec = 100  # 100\n",
+    "    dim_compared_vec = 200  # 100\n",
     "\n",
     "    def __init__(self):\n",
     "        self.sentence_length = self.wordvecs.sentence_length\n",
@@ -1244,7 +1244,7 @@
     "#                comparedVLayers2(self.target_out, self.source_surface_words_aligned_l),\n",
     "            lasagne.layers.reshape(self.target_matched_surface_input_l, ([0],1)),\n",
     "            self.target_matched_counts_input_l,\n",
-    "            #self.indicator_feat_l\n",
+    "            self.indicator_feat_l\n",
     "            ],\n",
     "            axis=1\n",
     "        )\n",
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -1576,10 +1576,10 @@
     {
      "data": {
       "text/plain": [
-       "(12, 1)"
+       "(12427, 1)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -1612,7 +1612,7 @@
        " linear_final_l.b]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7437,6 +7437,287 @@
     "    queries_exp.num_training_items = 50000  # don't need that many samples to see how well it performs\n",
     "    exp_results.append(('testing run', queries_exp.compute_batch(False)))\n",
     "    exp_results.append(('testing state', evalCurrentState(False, queries_exp.num_training_items)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, (0.040649041546011011, 0.040649041546011011)),\n",
+       " ('training state', (16751, 0.8726643185481464)),\n",
+       " ('testing run', (0.029816368260841913, 0.029816368260841913)),\n",
+       " ('testing state', (3257, 0.8541602701872889)),\n",
+       " (1, (0.019999649017465558, 0.019999649017465558)),\n",
+       " ('training state', (16751, 0.9320637573876186)),\n",
+       " ('testing run', (0.025060822855288361, 0.025060822855288361)),\n",
+       " ('testing state', (3257, 0.8652133865520417)),\n",
+       " (2, (0.014082454662991323, 0.014082454662991323)),\n",
+       " ('training state', (16751, 0.9490776670049549)),\n",
+       " ('testing run', (0.023715640716943546, 0.023715640716943546)),\n",
+       " ('testing state', (3257, 0.8655204175621738)),\n",
+       " (3, (0.010434311972288748, 0.010434311972288748)),\n",
+       " ('training state', (16751, 0.9579726583487553)),\n",
+       " ('testing run', (0.022557722516562687, 0.022557722516562687)),\n",
+       " ('testing state', (3257, 0.8618360454405894)),\n",
+       " (4, (0.0077628766400616618, 0.0077628766400616618)),\n",
+       " ('training state', (16751, 0.9640618470539072)),\n",
+       " ('testing run', (0.02326933684437231, 0.02326933684437231)),\n",
+       " ('testing state', (3257, 0.8618360454405894)),\n",
+       " (5, (0.0057502205511872186, 0.0057502205511872186)),\n",
+       " ('training state', (16751, 0.9681213061906752)),\n",
+       " ('testing run', (0.023536921738982499, 0.023536921738982499)),\n",
+       " ('testing state', (3257, 0.8615290144304575)),\n",
+       " (6, (0.0041946526475814989, 0.0041946526475814989)),\n",
+       " ('training state', (16751, 0.9705092233299505)),\n",
+       " ('testing run', (0.023658735553125688, 0.023658735553125688)),\n",
+       " ('testing state', (3257, 0.8652133865520417)),\n",
+       " (7, (0.0024024432286194456, 0.0024024432286194456)),\n",
+       " ('training state', (16751, 0.9718822756850337)),\n",
+       " ('testing run', (0.022629264024184501, 0.022629264024184501)),\n",
+       " ('testing state', (3257, 0.8633712004912496)),\n",
+       " (8, (0.0012604201247880837, 0.0012604201247880837)),\n",
+       " ('training state', (16751, 0.9734941197540445)),\n",
+       " ('testing run', (0.023282996382134252, 0.023282996382134252)),\n",
+       " ('testing state', (3257, 0.8615290144304575)),\n",
+       " (9, (0.0005413959569609486, 0.0005413959569609486)),\n",
+       " ('training state', (16751, 0.9742104948958271)),\n",
+       " ('testing run', (0.022229960825013138, 0.022229960825013138)),\n",
+       " ('testing state', (3257, 0.8624501074608536))]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3264, 'Prec = 1724.0/2046 = 0.842619745846, Rec = 1724.0/2015 = 0.855583126551, F1 = 0.849051957646')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3264,\n",
+       " 'Prec = 1724.0/2046 = 0.842619745846, Rec = 1724.0/2015 = 0.855583126551, F1 = 0.849051957646')"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evalCurrentStateF1(False,50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3257, 0.8624501074608536)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3257, 0.8624501074608536)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evalCurrentState(False,50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, (0.040737683761148918, 0.040737683761148918)),\n",
+       " ('training state', (16751, 0.8703957972658348)),\n",
+       " ('testing run', (0.03043622349096143, 0.03043622349096143)),\n",
+       " ('testing state', (3257, 0.8523180841264968)),\n",
+       " (1, (0.020092518089640764, 0.020092518089640764)),\n",
+       " ('training state', (16751, 0.9301534236761985)),\n",
+       " ('testing run', (0.025570338057137203, 0.025570338057137203)),\n",
+       " ('testing state', (3257, 0.8630641694811176)),\n",
+       " (2, (0.014424285078212177, 0.014424285078212177)),\n",
+       " ('training state', (16751, 0.9479434063637991)),\n",
+       " ('testing run', (0.02385036148350576, 0.02385036148350576)),\n",
+       " ('testing state', (3257, 0.8652133865520417)),\n",
+       " (3, (0.010878184881017971, 0.010878184881017971)),\n",
+       " ('training state', (16751, 0.9573756790639365)),\n",
+       " ('testing run', (0.023522055788912338, 0.023522055788912338)),\n",
+       " ('testing state', (3257, 0.8652133865520417)),\n",
+       " (4, (0.0078855968551349888, 0.0078855968551349888)),\n",
+       " ('training state', (16751, 0.9638230553399797)),\n",
+       " ('testing run', (0.023398395655811696, 0.023398395655811696)),\n",
+       " ('testing state', (3257, 0.8636782315013817)),\n",
+       " (5, (0.0060327848223781224, 0.0060327848223781224)),\n",
+       " ('training state', (16751, 0.9666288579786282)),\n",
+       " ('testing run', (0.022295818032174633, 0.022295818032174633)),\n",
+       " ('testing state', (3257, 0.8661344795824378)),\n",
+       " (6, (0.0040191331735678106, 0.0040191331735678106)),\n",
+       " ('training state', (16751, 0.9701510357590591)),\n",
+       " ('testing run', (0.023270757825656987, 0.023270757825656987)),\n",
+       " ('testing state', (3257, 0.867669634633098)),\n",
+       " (7, (0.0027172430318706661, 0.0027172430318706661)),\n",
+       " ('training state', (16751, 0.971703181899588)),\n",
+       " ('testing run', (0.023944983422190234, 0.023944983422190234)),\n",
+       " ('testing state', (3257, 0.8655204175621738)),\n",
+       " (8, (0.0015658363004497633, 0.0015658363004497633)),\n",
+       " ('training state', (16751, 0.9735538176825265)),\n",
+       " ('testing run', (0.023076504511215994, 0.023076504511215994)),\n",
+       " ('testing state', (3257, 0.8652133865520417)),\n",
+       " (9, (0.00025918538454784424, 0.00025918538454784424)),\n",
+       " ('training state', (16751, 0.9743895886812728)),\n",
+       " ('testing run', (0.023383247054022352, 0.023383247054022352)),\n",
+       " ('testing state', (3257, 0.8612219834203254))]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp_results # fix indicators, with neural stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, (0.039343042384444214, 0.039343042384444214)),\n",
+       " ('training state', (14649, 0.8726192914192095)),\n",
+       " ('testing run', (0.047385555656310883, 0.047385555656310883)),\n",
+       " ('testing state', (3176, 0.6804156171284634)),\n",
+       " (1, (0.017132957025776004, 0.017132957025776004)),\n",
+       " ('training state', (14649, 0.9414294491091542)),\n",
+       " ('testing run', (0.04264984817062005, 0.04264984817062005)),\n",
+       " ('testing state', (3176, 0.6917506297229219)),\n",
+       " (2, (0.011178823800828887, 0.011178823800828887)),\n",
+       " ('training state', (14649, 0.9584271963956584)),\n",
+       " ('testing run', (0.039691941379934481, 0.039691941379934481)),\n",
+       " ('testing state', (3176, 0.7008816120906801)),\n",
+       " (3, (0.0077280431648917005, 0.0077280431648917005)),\n",
+       " ('training state', (14649, 0.9670967301522289)),\n",
+       " ('testing run', (0.041572133084945263, 0.041572133084945263)),\n",
+       " ('testing state', (3176, 0.7021410579345088)),\n",
+       " (4, (0.0053888859713422405, 0.0053888859713422405)),\n",
+       " ('training state', (14649, 0.9720117414157963)),\n",
+       " ('testing run', (0.04078110821072916, 0.04078110821072916)),\n",
+       " ('testing state', (3176, 0.702455919395466)),\n",
+       " (5, (0.0033171027402468848, 0.0033171027402468848)),\n",
+       " ('training state', (14649, 0.9754932077274899)),\n",
+       " ('testing run', (0.039514166458599884, 0.039514166458599884)),\n",
+       " ('testing state', (3176, 0.7015113350125944)),\n",
+       " (6, (0.0013334371726598869, 0.0013334371726598869)),\n",
+       " ('training state', (14649, 0.9774728650419824)),\n",
+       " ('testing run', (0.038196185009305147, 0.038196185009305147)),\n",
+       " ('testing state', (3176, 0.6961586901763224)),\n",
+       " (7, (0.00021106950466850944, 0.00021106950466850944)),\n",
+       " ('training state', (14649, 0.978428561676565)),\n",
+       " ('testing run', (0.037526732578160478, 0.037526732578160478)),\n",
+       " ('testing state', (3176, 0.6996221662468514)),\n",
+       " (8, (-0.0011175292943338304, -0.0011175292943338304)),\n",
+       " ('training state', (14649, 0.9803399549457301)),\n",
+       " ('testing run', (0.035397841123072558, 0.035397841123072558)),\n",
+       " ('testing state', (3176, 0.6986775818639799)),\n",
+       " (9, (-0.0021602300120916159, -0.0021602300120916159)),\n",
+       " ('training state', (14649, 0.9808860673083487)),\n",
+       " ('testing run', (0.035801996989444827, 0.035801996989444827)),\n",
+       " ('testing state', (3176, 0.7021410579345088))]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3188, 'Prec = 1385.0/1896 = 0.730485232068, Rec = 1385.0/2060 = 0.672330097087, F1 = 0.700202224469')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3188,\n",
+       " 'Prec = 1385.0/1896 = 0.730485232068, Rec = 1385.0/2060 = 0.672330097087, F1 = 0.700202224469')"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evalCurrentStateF1(False, 50000)"
    ]
   },
   {
